# msg_filter

bounding_pointcloud/: CMakeLists.txt  README.md  nodelet_description.xml  package.xml  system.md
bounding_pointcloud/include/bounding_pointcloud/: ObjectDatabase.hpp  ScanPublisher.hpp  SynchnornizerNode.hpp  depth_traits.h
bounding_pointcloud/launch/: bounding_pointcloud.launch  darknet_ros.launch  depth_image_proc.launch  nodelet.launch  nodelet_test.launch  octomap_mapping_orbslam_tum.launch  orb_slam2_mydataset.launch  scan_publisher.launch
bounding_pointcloud/rviz/: rviz.rviz
bounding_pointcloud/scripts/: SynchronizerNode_py.py
bounding_pointcloud/src/: DebugNode.cpp  ImagePublisher.cpp  ImageSaver.cpp  ScanPublisher.cpp  SynchronizerNode.cpp  main.cpp  synchronizer_main.cpp
bounding_pointcloud/src/nodelets/: FeatureExtractor.cpp  ImageCrop.cpp  ImageCropExample.cpp  Nodelet.cpp  ObjectDatabase.cpp  PointsListener.cpp  crop_point_cloud.cpp  point_cloud_xyzrgb.cpp  point_cloud_xyzrgb_orig.cpp  util.cpp
bounding_pointcloud_msgs/: CMakeLists.txt  package.xml
bounding_pointcloud_msgs/msg/: CropImage.msg  DetectedPoint.msg
